--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -35,14 +35,13 @@
                 android:id="@+id/NorthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="31dp"
                 android:text="Northbound"
                 android:textAppearance="@android:style/TextAppearance.Holo.Large"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_marginLeft="22dp"
-                android:layout_marginStart="22dp" />
+                android:layout_marginStart="22dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -72,11 +71,21 @@
                 android:id="@+id/SouthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Southbound"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large"
+                android:layout_below="@+id/NorthText"
+                android:layout_alignLeft="@+id/NorthText"
+                android:layout_alignStart="@+id/NorthText" />
+
+            <TextView
+                android:id="@+id/CurrentStop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/textView"
                 android:layout_alignLeft="@+id/NorthText"
                 android:layout_alignStart="@+id/NorthText"
-                android:layout_below="@+id/NorthText"
-                android:layout_marginTop="13dp"
-                android:text="Southbound"
+                android:layout_marginBottom="12dp"
+                android:text="Current Stop"
                 android:textAppearance="@android:style/TextAppearance.Holo.Large" />
         </RelativeLayout>
 
