--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/NorthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Northbound"
+                android:text="@string/NorthText"
                 android:textAppearance="@android:style/TextAppearance.Holo.Large"
                 android:layout_marginLeft="22dp"
                 android:layout_marginStart="22dp"
@@ -44,18 +44,18 @@
                 android:layout_alignParentStart="true" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/SouthMin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0 Mins"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                 android:layout_alignBaseline="@+id/SouthText"
                 android:layout_alignBottom="@+id/SouthText"
-                android:layout_alignLeft="@+id/textView"
-                android:layout_alignStart="@+id/textView" />
+                android:layout_alignLeft="@+id/NorthMin"
+                android:layout_alignStart="@+id/NorthMin"
+                android:text="@string/SouthMin"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/NorthMin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/NorthText"
@@ -64,14 +64,14 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="38dp"
                 android:layout_marginRight="38dp"
-                android:text="0 Mins"
+                android:text="@string/NorthMin"
                 android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
             <TextView
                 android:id="@+id/SouthText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Southbound"
+                android:text="@string/SouthText"
                 android:textAppearance="@android:style/TextAppearance.Holo.Large"
                 android:layout_below="@+id/NorthText"
                 android:layout_alignLeft="@+id/NorthText"
@@ -81,11 +81,11 @@
                 android:id="@+id/CurrentStop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/textView"
+                android:layout_above="@+id/NorthMin"
                 android:layout_alignLeft="@+id/NorthText"
                 android:layout_alignStart="@+id/NorthText"
                 android:layout_marginBottom="12dp"
-                android:text="Current Stop"
+                android:text="@string/StopText"
                 android:textAppearance="@android:style/TextAppearance.Holo.Large" />
         </RelativeLayout>
 
